# boolean-maybe

./: .gitignore  README.md  pyproject.toml
.boolean-maybe/: boolean-maybe.sqlite3
docs/architecture/: architecture-overview.md
docs/architecture/decisions/: 001-python-runtime-packaging-and-development-tooling.md  002-execution-model-and-application-boundaries.md  003-simulated-external-service-contract.md  004-persistence-and-durable-consistency.md  005-identity-and-duplicate-prevention.md  006-retry-rate-limits-ambiguity-and-recovery.md
docs/domain/: core-entities.md
docs/product/: glossary.md  product-brief.md
docs/specs/features/: reliable-job-submission.md  simulated-external-service.md  submit-single-job.md
src/boolean_maybe/: __init__.py  canonical_json.py  cli.py
src/boolean_maybe/application/: __init__.py  classification.py  history_projection.py  reconciliation_sequence.py  recovery.py  submit.py  waiting.py
src/boolean_maybe/domain/: __init__.py  backoff.py  clock.py  idempotency_key.py  identifiers.py  monotonic_clock.py  random_source.py  retry_after.py  sleeper.py
src/boolean_maybe/persistence/: __init__.py  (+5 more)
tests/: test_bootstrap.py
tests/simulator/: conftest.py  test_canonicalize.py  test_cli_subprocess.py  test_concurrency.py  test_http_contract.py  test_idempotency.py  test_logging.py  test_packaging.py  test_raw_framing.py  test_scenario.py  test_service_presets.py  test_state.py
tests/submit/: conftest.py  test_application_submit.py  test_backoff.py  test_canonical_json.py  test_cli_subprocess.py  test_concurrent_processes.py  test_crash_boundary.py  test_domain.py  test_external_client_live.py  test_external_client_stub.py  test_history_projection.py  test_persistence_schema.py  test_reconcile_client_live.py  test_reconcile_client_stub.py  test_retry_after.py  test_transactions.py  test_waiting.py
(+11 files in other folders)
